Move test packet to testpackets directory.